# page-parser

./: LICENSE  README.md  experiment.py  main.py  pyproject.toml  quality_check.py  run_test.py  settings.toml  showcase.ipynb
src/: __init__.py  pipeline.py
src/common/: __init__.py  aliases.py  llm_providers.py  logging.py
src/config/: __init__.py  constants.py  paths.py  prompts.py  settings.py
src/pipeline/: __init__.py  annotate.py  convert.py  detector.py  image_summarizer.py  pipeline.py  utils.py
src/pipeline/document/: __init__.py  convert.py  detector.py  pdf_analyzer.py  text_extraction.py
src/pipeline/document/detection/: __init__.py  frontend.py
src/pipeline/document/detection/backends/: __init__.py  base.py  doclayout_yolo.py  yolo_doclaynet.py
src/pipeline/image/: __init__.py  annotate.py  preprocessing.py  summarizer.py
